grafana/grafana-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-core
  namespace: default
  labels:
    app: grafana
    component: core
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
        component: core
    spec:
      containers:
      - image: grafana/grafana:7.4.1
        name: grafana-core
        imagePullPolicy: IfNotPresent
        # env:
        resources:
          # keep request = limit to keep this container in guaranteed class
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 100Mi
        readinessProbe:
          httpGet:
            path: /login
            port: 3000
          # initialDelaySeconds: 30
          # timeoutSeconds: 1
        volumeMounts:
        - name: grafana-persistent-storage
          mountPath: /var/lib/grafana/data 
       # - name: grafana-persistent-storage-host
        #  mountPath: /var/lib/grafana    #chmod 777 /var/lib/grafana/data/ 
      volumes:
      - name: grafana-persistent-storage
        emptyDir: {}
    #  - name: grafana-persistent-storage-host
    #    hostPath:
    #      path: /var/lib/grafana/data  # 主机上的存储路径
     #     type: DirectoryOrCreate      # 如果目录不存在则自动创建
